--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "customloggerutils",
   "version": "1.0.0",
-  "main": "loggerUtils.js",
+  "main": "logger.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
